<resources>
    <string name="app_name">Kitchen Assistant</string>
    <string name="app_description">Receipts management</string>
    <string name="app_api_host">https://www.api.kitchenassistant.szczeliniak.pl</string>

    <string name="message_login_data_does_not_match">User and password does not match</string>
    <string name="message_wrong_password">Invalid password</string>
    <string name="message_wrong_email">Invalid email</string>
    <string name="message_receipt_name_is_empty">Receipt name cannot be empty</string>
    <string name="message_ingredient_name_is_empty">Ingredient name cannot be empty</string>
    <string name="message_ingredient_group_name_is_empty">Ingredient group name cannot be empty</string>
    <string name="message_no_internet_connection">No Internet connection. Try again later</string>
    <string name="message_cannot_execute_operation">Operation cannot be executed. Try again later</string>
    <string name="message_step_name_is_empty">Step name cannot be empty</string>
    <string name="message_shopping_list_name_is_empty">Shopping list name cannot be empty</string>
    <string name="message_shopping_list_item_name_is_empty">Item name cannot be empty</string>
    <string name="message_empty_name">Name cannot be empty</string>
    <string name="message_register_email_exists">Email exists</string>
    <string name="message_empty_list">Empty list</string>
    <string name="message_category_name_is_empty">Category name cannot be empty</string>
    <string name="message_image_crop_error">Cannot crop image</string>
    <string name="message_token_expired">Token expired or invalid. Log in again</string>
    <string name="message_confirm_action">Are you sure?</string>
    <string name="message_cannot_load_youtube_video">Cannot load YouTube video</string>
    <string name="message_login_with_facebook_error">Cannot log in with Facebook. Try again</string>
    <string name="message_default_day_plan_prefix">Day Plan for</string>

    <string name="form_login_email">Email</string>
    <string name="form_login_password">Password</string>
    <string name="form_register_email">Email</string>
    <string name="form_register_name">Name</string>
    <string name="from_register_password">Password</string>
    <string name="form_register_password2">Repeat password</string>

    <string name="label_nav_view_section_others">Others</string>
    <string name="label_nav_view_item_logout">Log out</string>

    <string name="description_logo">Application logo</string>
    <string name="description_add_receipt">Add receipt</string>
    <string name="description_add_ingredient">Add ingredient</string>
    <string name="description_add_step">Add step</string>
    <string name="description_add_shopping_list">Add shopping list</string>
    <string name="description_add_shopping_list_item">Add shopping list item</string>
    <string name="description_add_category">Add category</string>
    <string name="description_receipt_photo">Receipt photo</string>
    <string name="description_receipt_is_favorite">Receipt is marked as favorite</string>
    <string name="description_add_day_plan">Add day plan</string>
    <string name="description_add_receipt_to_day_plan">Add receipt to day plan</string>

    <string name="title_activity_new_receipt">New receipt</string>
    <string name="title_activity_edit_receipt">Edit receipt</string>
    <string name="title_activity_new_shopping_list">Add shopping list</string>
    <string name="title_activity_edit_shopping_list">Edit shopping list</string>
    <string name="title_activity_archived_shopping_lists">Archived shopping lists</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_fragment_receipts">Receipts</string>
    <string name="title_fragment_receipt_info">Info</string>
    <string name="title_fragment_receipt_ingredients">Ingredients</string>
    <string name="title_fragment_receipt_steps">Steps</string>
    <string name="title_fragment_shopping_lists">Shopping lists</string>
    <string name="title_fragment_day_plans">Day plans</string>
    <string name="title_fragment_day_plan_info">Info</string>
    <string name="title_fragment_day_plan_ingredients">Ingredients</string>
    <string name="title_dialog_add_ingredient">Add ingredient</string>
    <string name="title_dialog_edit_ingredient">Edit ingredient</string>
    <string name="title_dialog_add_step">Add step</string>
    <string name="title_dialog_edit_step">Edit step</string>
    <string name="title_dialog_add_shopping_list_item">Add shopping list item</string>
    <string name="title_dialog_edit_shopping_list_item">Edit shopping list item</string>
    <string name="title_dialog_edit_category">Edit category</string>
    <string name="title_dialog_add_category">Add category</string>
    <string name="title_dialog_add_ingredient_to_shopping_list">Add to shopping list</string>
    <string name="title_dialog_receipts_filter">Filter receipts</string>
    <string name="title_dialog_shopping_lists_filter">Filter shopping lists</string>
    <string name="title_dialog_add_day_plan">Add day plan</string>
    <string name="title_dialog_edit_day_plan">Edit day plan</string>
    <string name="title_dialog_day_plans_filter">Filter day plans</string>
    <string name="title_dialog_add_receipt_to_day_plan">Add receipt to day plan</string>
    <string name="title_dialog_choose_day_plan">Choose day plan</string>

    <string name="label_button_add">Add</string>
    <string name="title_button_edit">Edit</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_delete">Delete</string>
    <string name="label_button_archive">Archive</string>
    <string name="label_button_register">Register</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_select_date">Select date</string>
    <string name="label_button_edit">Edit</string>
    <string name="label_button_add_to_shopping_list">Add to shopping list</string>
    <string name="label_button_filter">Filter</string>
    <string name="label_button_login_with_facebook">Login with Facebook</string>
    <string name="label_receipt_name">Receipt name</string>
    <string name="label_receipt_author">Author</string>
    <string name="label_receipt_url">URL</string>
    <string name="label_receipt_description">Description</string>
    <string name="label_receipt_tags">Tags</string>
    <string name="label_receipt_category">Category</string>
    <string name="label_receipt_ingredient_group_name">Ingredient group name</string>
    <string name="label_ingredient_name">Ingredient name</string>
    <string name="label_ingredient_quantity">Quantity</string>
    <string name="label_step_name">Step name</string>
    <string name="label_step_description">Description</string>
    <string name="label_step_sequence">Sequence</string>
    <string name="label_shopping_list_name">List name</string>
    <string name="label_shopping_list_description">Description</string>
    <string name="label_shopping_list_date">Date</string>
    <string name="label_shopping_list_items">Items</string>
    <string name="label_shopping_list_item_name">Item name</string>
    <string name="label_shopping_list_item_quantity">Quantity</string>
    <string name="label_shopping_list_item_sequence">Sequence</string>
    <string name="label_category_name">Category name</string>
    <string name="label_category_sequence">Sequence</string>
    <string name="label_receipt_tag">Tag</string>
    <string name="label_button_add_photo">Add photo</string>
    <string name="label_button_search">Search</string>
    <string name="label_button_add_to_favorites">Add to favorites</string>
    <string name="label_button_remove_from_favorites">Remove from favorites</string>
    <string name="label_button_confirm">Yes, do it!</string>
    <string name="label_category_tab_all">All</string>
    <string name="label_day_plan_date">Date</string>
    <string name="label_day_plan_receipts">Receipts</string>
    <string name="label_day_plan_name">Name</string>
    <string name="label_shopping_list_automatic_archiving">Archive automatically when selected date passes</string>
    <string name="label_day_plan_automatic_archiving">Archive automatically when selected date passes</string>
    <string name="label_day_plan_description">Description</string>
    <string name="label_button_add_to_day_plan">Add to day plan</string>

    <string name="placeholder_receipt_author">Pawkens</string>
    <string name="placeholder_receipt_category">Some category</string>
    <string name="placeholder_step_name">Some step</string>
    <string name="placeholder_step_description">Some step description</string>
    <string name="placeholder_shopping_list_description">Shopping list description</string>
    <string name="placeholder_shopping_list_date">2022&#8211;01&#8211;01</string>
    <string name="placeholder_shopping_list_name">Shopping list name</string>
    <string name="placeholder_receipt_url">https://www.google.pl</string>
    <string name="placeholder_receipt_tags">Tag1, Tag2, Tag3, Tag4</string>
    <string name="placeholder_receipt_description">Some receipt description</string>
    <string name="placeholder_ingredient_name">Ingredient name</string>
    <string name="placeholder_ingredient_group_name">Ingredient group name</string>
    <string name="placeholder_ingredient_description">Ingredient description</string>
    <string name="placeholder_receipt_name">Receipt name</string>
    <string name="placeholder_receipt_date">2022&#8211;03&#8211;02</string>
    <string name="placeholder_shopping_list_item_name">Shopping list item name</string>
    <string name="placeholder_shopping_list_item_quantity">Shopping list item quantity</string>
    <string name="placeholder_shopping_list_item_receipt_name">Shopping list item receipt name</string>
    <string name="placeholder_day_plan_date">2222&#8211;02&#8211;02</string>
    <string name="placeholder_day_plan_name">Some day plan name</string>
    <string name="placeholder_day_plan_description">Some day plan description</string>
</resources>