<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group>
        <item
                android:id="@+id/menu_nav_view_item_receipts"
                android:title="@string/title_fragment_receipts"/>
        <item
                android:id="@+id/menu_nav_view_item_shopping_lists"
                android:title="@string/title_fragment_shopping_lists"/>
    </group>

    <group>
        <item
                android:id="@+id/menu_nav_view_item_archived_shopping_lists"
                android:title="@string/title_activity_archived_shopping_lists"/>
    </group>

    <item android:title="@string/label_nav_view_section_others">
        <menu>
            <item android:id="@+id/menu_nav_view_item_logout"
                  android:title="@string/label_nav_view_item_logout"/>
        </menu>
    </item>

</menu>