<?xml version="1.0" encoding="utf-8"?>
<pl.szczeliniak.kitchenassistant.android.ui.components.layouts.KaLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:withPadding="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <pl.szczeliniak.kitchenassistant.android.ui.components.forms.KaText
            android:id="@+id/title"
            app:type="dialogTitle"
            app:text="@string/title_dialog_add_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <pl.szczeliniak.kitchenassistant.android.ui.components.forms.KaInput
            android:layout_width="match_parent"
            android:id="@+id/step_name"
            app:hint="@string/label_step_name"
            app:maxLength="@integer/max_length_step_name"
            app:inputType="text"
            app:counterEnabled="true"
            android:layout_height="wrap_content"/>

    <pl.szczeliniak.kitchenassistant.android.ui.components.forms.KaInput
            android:layout_width="match_parent"
            android:id="@+id/step_description"
            app:hint="@string/label_step_description"
            app:maxLength="@integer/max_length_step_description"
            app:inputType="multiline"
            app:counterEnabled="true"
            app:minLines="2"
            android:layout_height="wrap_content"/>

    <pl.szczeliniak.kitchenassistant.android.ui.components.forms.KaInput
            android:layout_width="match_parent"
            android:id="@+id/step_sequence"
            app:hint="@string/label_step_sequence"
            app:maxLength="@integer/max_length_step_sequence"
            app:inputType="number"
            app:counterEnabled="true"
            android:layout_height="wrap_content"/>

</pl.szczeliniak.kitchenassistant.android.ui.components.layouts.KaLinearLayout>