<?xml version="1.0" encoding="utf-8"?>
<pl.szczeliniak.kitchenassistant.android.ui.components.layouts.KaLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        app:withPadding="true"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <pl.szczeliniak.kitchenassistant.android.ui.components.forms.KaText
            android:id="@+id/title"
            app:type="dialogTitle"
            app:text="@string/title_dialog_add_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <pl.szczeliniak.kitchenassistant.android.ui.components.forms.KaInput
            android:layout_width="match_parent"
            android:id="@+id/ingredient_name"
            app:hint="@string/label_ingredient_name"
            app:maxLength="@integer/max_length_ingredient_name"
            app:inputType="text"
            app:counterEnabled="true"
            android:layout_height="wrap_content"/>

    <pl.szczeliniak.kitchenassistant.android.ui.components.forms.KaInput
            android:layout_width="match_parent"
            android:id="@+id/ingredient_quantity"
            app:hint="@string/label_ingredient_quantity"
            app:maxLength="@integer/max_length_ingredient_quantity"
            app:inputType="text"
            app:counterEnabled="true"
            android:layout_height="wrap_content"/>

</pl.szczeliniak.kitchenassistant.android.ui.components.layouts.KaLinearLayout>