<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <pl.szczeliniak.kitchenassistant.android.ui.components.ToolbarComponent
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/toolbar"/>

    <androidx.core.widget.NestedScrollView
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                style="@style/BaseLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/register_email"
                    app:hint="@string/form_register_email"
                    app:maxLength="@integer/max_length_email"
                    app:inputType="email"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/register_name"
                    app:hint="@string/form_register_name"
                    app:maxLength="@integer/max_length_name"
                    app:inputType="text"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/register_password"
                    app:hint="@string/from_register_password"
                    app:maxLength="@integer/max_length_password"
                    app:inputType="password"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/register_password2"
                    app:hint="@string/form_register_password2"
                    app:maxLength="@integer/max_length_password"
                    app:inputType="password"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.ButtonComponent
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_register"
                    app:text="@string/label_button_register"
                    app:style="primary"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

