<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/ContentLayout"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/title_dialog_add_shopping_list_item"
            android:id="@+id/title"
            style="@style/TextViewTitle"
            android:textColor="@color/primary_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:counterMaxLength="@integer/max_length_shopping_list_item_name"
            style="@style/InputLayoutWithCounter"
            android:id="@+id/shopping_list_item_name_layout"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/label_shopping_list_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_length_shopping_list_item_name"
                style="@style/EditTextText"
                android:id="@+id/shopping_list_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:counterMaxLength="@integer/max_length_shopping_list_item_quantity"
            style="@style/InputLayoutWithCounter"
            android:id="@+id/shopping_list_item_quantity_layout"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/label_shopping_list_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_length_shopping_list_item_quantity"
                style="@style/EditTextText"
                android:id="@+id/shopping_list_item_quantity"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:counterMaxLength="@integer/max_length_shopping_list_item_sequence"
            style="@style/InputLayoutWithCounter"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/label_shopping_list_item_sequence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_length_shopping_list_item_sequence"
                style="@style/EditTextNumber"
                android:id="@+id/shopping_list_item_sequence"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>