<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <pl.szczeliniak.kitchenassistant.android.ui.components.ToolbarComponent
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/toolbar"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                style="@style/BaseLayout"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/receipt_name"
                    app:hint="@string/label_receipt_name"
                    app:maxLength="@integer/max_length_receipt_name"
                    app:inputType="text"
                    app:counterEnabled="true"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/receipt_author"
                    app:hint="@string/label_receipt_author"
                    app:maxLength="@integer/max_length_receipt_author"
                    app:inputType="text"
                    app:counterEnabled="true"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:id="@+id/receipt_category"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/receipt_url"
                    app:hint="@string/label_receipt_url"
                    app:maxLength="@integer/max_length_receipt_url"
                    app:inputType="uri"
                    app:counterEnabled="true"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.InputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/receipt_description"
                    app:hint="@string/label_receipt_description"
                    app:maxLength="@integer/max_length_receipt_description"
                    app:inputType="multiline"
                    app:minLines="4"
                    app:counterEnabled="true"
                    android:layout_height="wrap_content"/>

            <pl.szczeliniak.kitchenassistant.android.ui.components.AutocompleteInputComponent
                    android:layout_width="match_parent"
                    android:id="@+id/tag"
                    app:hint="@string/label_receipt_tag"
                    app:maxLength="@integer/max_length_receipt_tag"
                    app:counterEnabled="true"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tag_chips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                <pl.szczeliniak.kitchenassistant.android.ui.components.ButtonComponent
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_add_photos"
                        app:text="@string/label_button_add_photo"
                        app:style="secondary"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:nestedScrollingEnabled="false"
                        app:layout_constraintTop_toBottomOf="@id/button_add_photos"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_width="match_parent"
                        android:id="@+id/photos_recycler_view"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>