<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            style="@style/ContentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_day_plan_name"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/day_plan_name"
                    tools:text="@string/placeholder_day_plan_name"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_day_plan_date"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/day_plan_date"
                    tools:text="@string/placeholder_day_plan_date"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:id="@+id/day_plan_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_day_plan_description"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/day_plan_description"
                    tools:text="@string/placeholder_day_plan_description"
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/label_day_plan_recipes"
                    style="@style/TextViewSubheader"
                    android:textColor="@color/secondary_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/day_plan_recipes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/padding_margin_super_big"
                        android:clipToPadding="false"
                        android:id="@+id/recycler_view"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_recipe_to_day_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_add"
            android:contentDescription="@string/description_add_recipe_to_day_plan"
            style="@style/ButtonFloatingAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>